Fixed example code.

--- a/09/Now/TtnToThingSpeakAdapter/now.json
+++ b/09/Now/TtnToThingSpeakAdapter/now.json
@@ -3,5 +3,8 @@
     "name": "fhnw-iot-ttn-to-thingspeak",
     "builds": [
         { "src": "*.js", "use": "@now/node" }
+    ],
+    "routes": [
+    	{ "src": "/", "dest": "/index.js"}
     ]
 }
