Added route to enable now-lambda-runner.

--- a/09/Now/WebRequest/now.json
+++ b/09/Now/WebRequest/now.json
@@ -3,5 +3,8 @@
     "name": "nodejs-web-request",
     "builds": [
         { "src": "*.js", "use": "@now/node" }
+    ],
+    "routes": [
+    	{ "src": "/", "dest": "/index.js"}
     ]
 }
