--- a/06/Bash/my.service
+++ b/06/Bash/my.service
@@ -3,7 +3,7 @@ Description=my service on port 8080
 
 [Service]
 WorkingDirectory=/home/pi/fhnw-iot/06/Nodejs/
-ExecStart=/usr/local/bin/node WebService.js
+ExecStart=/usr/bin/node WebService.js
 Restart=on-failure
 
 [Install]
